# s2f-1

./: .gitignore  CMakeLists.txt  build.sh
example/: meshTest.hdf
resources/: CMakeLists.txt
src/: CMakeLists.txt  assignBC.py  assignMat.py  assignMesh.py  assignSource.py  defineMaterial.py  fish.py  fish_appGUI.py  fish_window_handler.py  make_transx_input.py  mesh.py  salome2fish.py  setSP.py  trans2.py
src/fish/: CMakeLists.txt  __init__.py  boundary.py  mesh.py  mgxs.py  region.py  solver_parameter.py  source.py  spherical_harmonics.py
src/fish_GUI/: CMakeLists.txt  __init__.py  assignBC.py  assignMat.py  assignMesh.py  assignSource.py  combobox.py  defineMaterial.py  fish_window_handler.py  make_transx_input.py  setSP.py
src/mgxs/: fendl_library.py  mgxs.py  test_fendl.py  xs.h5
src/test/: test_mgxs.py
